--- a/.travis.yml
+++ b/.travis.yml
@@ -3,9 +3,9 @@ language: python
 sudo: false
 
 env:
-#  - DJANGO_VERSION=1.8.*
-#  - DJANGO_VERSION=1.9.*
-#  - DJANGO_VERSION=1.10.*
+  - DJANGO_VERSION=1.8.*
+  - DJANGO_VERSION=1.9.*
+  - DJANGO_VERSION=1.10.*
   - DJANGO_VERSION=1.11.*
 
 python:
