--- a/.travis.yml
+++ b/.travis.yml
@@ -7,13 +7,20 @@ env:
   - DJANGO_VERSION=1.9.*
   - DJANGO_VERSION=1.10.*
   - DJANGO_VERSION=1.11.*
+  - DJANGO_VERSION=2.0.*
+  - DJANGO_VERSION=2.1.*
 
 python:
     - "2.7"
     - "3.4"
     - "3.5"
     - "3.6"
-    - "nightly"
+
+matrix:
+  include:
+    - python: 3.7
+      dist: xenial
+      sudo: true
 
 install:
     - pip install -q coveralls unittest2 Django==$DJANGO_VERSION
