--- a/.travis.yml
+++ b/.travis.yml
@@ -17,10 +17,6 @@ python:
     - "3.6"
 
 matrix:
-  include:
-    - python: 3.7
-      dist: xenial
-      sudo: true
   exclude:
     - python: 2.7
       env: DJANGO_VERSION=2.0.*
@@ -28,6 +24,10 @@ matrix:
       env: DJANGO_VERSION=2.1.*
     - python: 3.4
       env: DJANGO_VERSION=2.1.*
+#  include:
+#    - python: 3.7
+#      dist: xenial
+#      sudo: true
 
 install:
     - pip install -q coveralls unittest2 Django==$DJANGO_VERSION
