--- a/.travis.yml
+++ b/.travis.yml
@@ -3,12 +3,12 @@ language: python
 sudo: false
 
 env:
-  - DJANGO_VERSION=1.8.*
-  - DJANGO_VERSION=1.9.*
-  - DJANGO_VERSION=1.10.*
-  - DJANGO_VERSION=1.11.*
-  - DJANGO_VERSION=2.0.*
-  - DJANGO_VERSION=2.1.*
+  - DJANGO_VERSION=1.8
+  - DJANGO_VERSION=1.9
+  - DJANGO_VERSION=1.10
+  - DJANGO_VERSION=1.11
+  - DJANGO_VERSION=2.0
+  - DJANGO_VERSION=2.1
 
 python:
     - "2.7"
@@ -19,11 +19,11 @@ python:
 matrix:
   exclude:
     - python: 2.7
-      env: DJANGO_VERSION=2.0.*
+      env: DJANGO_VERSION=2.0
     - python: 2.7
-      env: DJANGO_VERSION=2.1.*
+      env: DJANGO_VERSION=2.1
     - python: 3.4
-      env: DJANGO_VERSION=2.1.*
+      env: DJANGO_VERSION=2.1
 #  include:
 #    - python: 3.7
 #      dist: xenial
