--- a/.travis.yml
+++ b/.travis.yml
@@ -26,6 +26,27 @@ matrix:
     - python: "3.7"
       dist: xenial
       sudo: true
+      env: DJANGO_VERSION=1.8.*
+    - python: "3.7"
+      dist: xenial
+      sudo: true
+      env: DJANGO_VERSION=1.9.*
+    - python: "3.7"
+      dist: xenial
+      sudo: true
+      env: DJANGO_VERSION=1.10.*
+    - python: "3.7"
+      dist: xenial
+      sudo: true
+      env: DJANGO_VERSION=1.11.*
+    - python: "3.7"
+      dist: xenial
+      sudo: true
+      env: DJANGO_VERSION=2.0.*
+    - python: "3.7"
+      dist: xenial
+      sudo: true
+      env: DJANGO_VERSION=2.1.*
 
 install:
     - pip install -q coveralls unittest2 Django==$DJANGO_VERSION
