--- a/.travis.yml
+++ b/.travis.yml
@@ -1,19 +1,52 @@
 language: python
 
-sudo: false
-
 env:
   - DJANGO_VERSION=1.8.*
   - DJANGO_VERSION=1.9.*
   - DJANGO_VERSION=1.10.*
   - DJANGO_VERSION=1.11.*
+  - DJANGO_VERSION=2.0.*
+  - DJANGO_VERSION=2.1.*
 
 python:
-    - "2.7"
-    - "3.4"
-    - "3.5"
-    - "3.6"
-    - "nightly"
+  - "2.7"
+  - "3.4"
+  - "3.5"
+  - "3.6"
+
+matrix:
+  exclude:
+    - python: "2.7"
+      env: DJANGO_VERSION=2.0.*
+    - python: "2.7"
+      env: DJANGO_VERSION=2.1.*
+    - python: "3.4"
+      env: DJANGO_VERSION=2.1.*
+  include:
+    - python: "3.7"
+      dist: xenial
+      sudo: true
+      env: DJANGO_VERSION=1.8.*
+    - python: "3.7"
+      dist: xenial
+      sudo: true
+      env: DJANGO_VERSION=1.9.*
+    - python: "3.7"
+      dist: xenial
+      sudo: true
+      env: DJANGO_VERSION=1.10.*
+    - python: "3.7"
+      dist: xenial
+      sudo: true
+      env: DJANGO_VERSION=1.11.*
+    - python: "3.7"
+      dist: xenial
+      sudo: true
+      env: DJANGO_VERSION=2.0.*
+    - python: "3.7"
+      dist: xenial
+      sudo: true
+      env: DJANGO_VERSION=2.1.*
 
 install:
     - pip install -q coveralls unittest2 Django==$DJANGO_VERSION
