--- a/.travis.yml
+++ b/.travis.yml
@@ -7,12 +7,14 @@ env:
   - DJANGO_VERSION=1.11.*
   - DJANGO_VERSION=2.0.*
   - DJANGO_VERSION=2.1.*
+  - DJANGO_VERSION-3.0.*
 
 python:
   - "2.7"
   - "3.4"
   - "3.5"
   - "3.6"
+  - "3.7"
 
 matrix:
   exclude:
@@ -20,6 +22,8 @@ matrix:
       env: DJANGO_VERSION=2.0.*
     - python: "2.7"
       env: DJANGO_VERSION=2.1.*
+    - python: "2.7"
+      env: DJANGO_VERSION=3.0.*
     - python: "3.4"
       env: DJANGO_VERSION=2.1.*
   include:
