--- a/.travis.yml
+++ b/.travis.yml
@@ -7,7 +7,7 @@ env:
   - DJANGO_VERSION=1.11.*
   - DJANGO_VERSION=2.0.*
   - DJANGO_VERSION=2.1.*
-  - DJANGO_VERSION-3.0.*
+  - DJANGO_VERSION-3.0
 
 python:
   - "2.7"
