--- a/.travis.yml
+++ b/.travis.yml
@@ -23,7 +23,7 @@ matrix:
     - python: "2.7"
       env: DJANGO_VERSION=2.1.*
     - python: "2.7"
-      env: DJANGO_VERSION=3.0.*
+      env: DJANGO_VERSION=3.0
     - python: "3.4"
       env: DJANGO_VERSION=2.1.*
   include:
