--- a/.travis.yml
+++ b/.travis.yml
@@ -26,6 +26,10 @@ matrix:
       env: DJANGO_VERSION=3.0
     - python: "3.4"
       env: DJANGO_VERSION=2.1.*
+    - python: "3.4"
+      env: DJANGO_VERSION=3.0*
+    - python: "3.5"
+      env: DJANGO_VERSION=3.0*
   include:
     - python: "3.7"
       dist: xenial
