--- a/.travis.yml
+++ b/.travis.yml
@@ -7,12 +7,18 @@ env:
   - DJANGO_VERSION=1.11.*
   - DJANGO_VERSION=2.0.*
   - DJANGO_VERSION=2.1.*
+  - DJANGO_VERSION=3.0.*
+  - DJANGO_VERSION=3.1.*
+  - DJANGO_VERSION=3.2.*
 
 python:
   - "2.7"
   - "3.4"
   - "3.5"
   - "3.6"
+  - "3.7"
+  - "3.8"
+  - "3.9"
 
 matrix:
   exclude:
@@ -20,8 +26,14 @@ matrix:
       env: DJANGO_VERSION=2.0.*
     - python: "2.7"
       env: DJANGO_VERSION=2.1.*
+    - python: "2.7"
+      env: DJANGO_VERSION=3.*.*
     - python: "3.4"
       env: DJANGO_VERSION=2.1.*
+    - python: "3.4"
+      env: DJANGO_VERSION=3.*.*
+    - python: "3.5"
+      env: DJANGO_VERSION=3.*.*
   include:
     - python: "3.7"
       dist: xenial
@@ -47,6 +59,18 @@ matrix:
       dist: xenial
       sudo: true
       env: DJANGO_VERSION=2.1.*
+    - python: "3.7"
+      dist: xenial
+      sudo: true
+      env: DJANGO_VERSION=3.0.*
+    - python: "3.7"
+      dist: xenial
+      sudo: true
+      env: DJANGO_VERSION=3.1.*
+    - python: "3.7"
+      dist: xenial
+      sudo: true
+      env: DJANGO_VERSION=3.2.*
 
 install:
     - pip install -q coveralls unittest2 Django==$DJANGO_VERSION
