--- a/.travis.yml
+++ b/.travis.yml
@@ -27,13 +27,25 @@ matrix:
     - python: "2.7"
       env: DJANGO_VERSION=2.1.*
     - python: "2.7"
-      env: DJANGO_VERSION=3.*.*
+      env: DJANGO_VERSION=3.0.*
+    - python: "2.7"
+      env: DJANGO_VERSION=3.1.*
+    - python: "2.7"
+      env: DJANGO_VERSION=3.2.*
     - python: "3.4"
       env: DJANGO_VERSION=2.1.*
     - python: "3.4"
-      env: DJANGO_VERSION=3.*.*
+      env: DJANGO_VERSION=3.0.*
+    - python: "3.4"
+      env: DJANGO_VERSION=3.1.*
+    - python: "3.4"
+      env: DJANGO_VERSION=3.2.*
     - python: "3.5"
-      env: DJANGO_VERSION=3.*.*
+      env: DJANGO_VERSION=3.0.*
+    - python: "3.5"
+      env: DJANGO_VERSION=3.1.*
+    - python: "3.5"
+      env: DJANGO_VERSION=3.2.*
   include:
     - python: "3.7"
       dist: xenial
